# taxi-prediction-fullstack-daniel-opa24

./: .gitignore  README.md  data_cleaning_summary.md  ml_glossary.md  pyproject.toml  setup.py  start.ps1
.streamlit/: config.toml
explorations/: eda.ipynb
src/taxipred/backend/: api.py  data_cleaning.py  data_processing.py  google_services.py  train_model.py
src/taxipred/data/: taxi_trip_pricing_clean.csv
src/taxipred/frontend/: components.py  dashboard.py  helpers.py  ml_glossary.py  styles.css  ui_components.py  ui_helpers.py
src/taxipred/frontend/pages/: 1_Price_Prediction.py  2_Data_Explorer.py  3_Model_Performance.py
src/taxipred/scripts/: data_cleaning.py  train_model.py
src/taxipred/utils/: api_helpers.py  constants.py  helpers.py
