[project]
name = "taxipred"
version = "0.1.0"
description = "AI Engineering lab project: taxi fare prediction using FastAPI, ML, and Streamlit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.2",
    "pandas>=2.3.2",
    "setuptools>=80.9.0",
    "streamlit>=1.49.1",
    "uvicorn>=0.35.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"