[project]
name = "taxipred"
version = "0.1.3"
description = "AI Engineering lab project: taxi fare prediction using FastAPI, ML, and Streamlit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.2",
    "googlemaps>=4.10.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.7.2",
    "streamlit>=1.49.1",
    "uvicorn>=0.35.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
